--- a/01-Day1.Rmd
+++ b/01-Day1.Rmd
@@ -1088,17 +1088,17 @@ R assumes that the first argument (the data file) is `scrap_file` and that the 2
 
 # <i class="fas fa-key fa-xs" style="color: #c81888;" aria-hidden="true"> </i> Key terms {-} 
 
-|    |                                                                  |   
-|----|:-----------------------------------------------------------------|  
-|`package  `| An add-on for R that contains new functions that someone created to help you. It's like an App for R.  |  
-|`library  `| The name of the folder that stores all your packages, and the function used to load a package.  |  
-|`function  `| Functions perform an operation on your data and returns a result. The function `sum()` takes a series of values and returns the sum for you.  |  
-|`argument  `| Arguments are options or inputs that you pass to a function to change how it behaves. The argument `skip = 1` tells the `read_csv()` function to ignore the first row when reading in a data file. To see the default values for a function you can type `?read_csv` in the console.  |  
+|           |  |                                                                  |   
+|-----------|--|:-----------------------------------------------------------------|  
+|`package  `|  | An add-on for R that contains new functions that someone created to help you. It's like an App for R.  |  
+|`library  `|  |The name of the folder that stores all your packages, and the function used to load a package.  |  
+|`function  `|  | Functions perform an operation on your data and returns a result. The function `sum()` takes a series of values and returns the sum for you.  |  
+|`argument  `|  | Arguments are options or inputs that you pass to a function to change how it behaves. The argument `skip = 1` tells the `read_csv()` function to ignore the first row when reading in a data file. To see the default values for a function you can type `?read_csv` in the console.  |  
 
 <br>
 
 <details>
-<summary class = "btn_code" style="font-size: 15px;"> <i class="fa fa-star"></i> BONUS <i class="fa fa-star"></i> Build your own Word Cloud </summary>
+<summary class = "btn_code" style="font-size: 15px;"> <i class="fa fa-star"></i> BONUS <i class="fa fa-star"></i> &nbsp; &nbsp; Build your own Word Cloud </summary>
 <div class="quiz" style="margin-top: 0;">
 <p>
 
