--- a/02_Day2.Rmd
+++ b/02_Day2.Rmd
@@ -496,7 +496,7 @@ __Key comparison operators__
 | `<=`  | less than or equal to    |
 | `==`  | equal to                 |
 | `!=`  | NOT equal to             |
-| `%in%`| value is in a list       |
+| `%in%`| is value in a list: `X %in% c(1,3,5)` |
 
 
 ## <i class="fa fa-bicycle" aria-hidden="true" style="color: green"></i> Exercise {-}
