--- a/03_Day3.Rmd
+++ b/03_Day3.Rmd
@@ -25,9 +25,9 @@ htmltools::tagList(rmarkdown::html_dependency_font_awesome())
 # Welcome back Jedis! {-}
 <hr>
 
-![](images/day3_sq.png){width="260" style="float: left; margin-right: 60px; margin-top: -10px;"}
+![](images/day3_sq.png){width="260" style="float: left; margin-right: 60px; margin-top: 8px;"}
 
-<br><br>
+<br>
 
 ### Please connect to your droid {-}
 
@@ -43,20 +43,33 @@ __Open your RStudio project__
 - __Open__ your project folder from last week
 - Double click the __.Rproj__ file to open RStudio
 
+__Open a New script__
+
+- __File > New File > R Script__
+
+- Click the _floppy disk_ save icon
+- Give it a name: `03_day.R` or `jakku_plots.R` will work well
+
+
 
 ## Schedule  {-}
 
 <div class="well">
 
 - Review
+- Where's Finn?
 - Join 2 tables
-- Convert units
+- Conditional mutate! 
+    - `ifelse()`
+    - Yes/No decisions
 - Summarize by group
-- `ifelse()`
-- In depth plots
-    - Set geometries
-    - Add geoms
-    - Set colors
+- More plots
+    - New geoms
+    - Reference lines
+    - Faceting
+    - Colors
+    - Titles 
+    
 </div>   
     
 
@@ -85,15 +98,20 @@ __So where were we? Oh right, we we're enjoying our time on beautiful lush Endor
 
 That's enough _scuttlebutting_ around on Endor, Finn needs us back on Jakku. It turns out we forgot to pick-up Finn when we left. Now he's being held ransom by Junk Boss Plutt. We'll need to act fast to get to him before the Empire does. __Blast off!__ 
 
-![](images/finn_run.gif){style="margin-left: 22%; width: 50%;"}
+<br>
 
-
-## Update from BB8! {-}
-<hr>
-
-On our flight back to Jakku BB8 was able to recover a __full__ set of scrap records from the notorious Unkar Plutt. Let's take a look.
+![](images/finn_run.gif){style="margin-left: 18%; width: 60%; margin-top: 6px;"}
 
 <br>
+
+
+# More data {-}
+
+<div class="tip"> 
+<h3 style="margin-top: 13px;"> Update from BB8! </h3>
+
+BB8 was busy on our flight back to Jakku, and was able to recover a __full__ set of scrap records from the notorious Unkar Plutt. Let's take a look.
+
 
 ```{r full-scrap, eval=T, echo=T}
 library(readr)
@@ -102,17 +120,20 @@ library(dplyr)
 # Read in the full scrap database
 scrap <- read_csv("https://itep-r.netlify.com/data/starwars_scrap_jakku_full.csv")
 ```
-
+</div>
 
 <br>
 
-# | Back on Jakku
+# | Jakku re-visited
+<hr>
 
-Okay, we're back on the big ol' dust bucket. Let's try not to forget anything while were here this time. I have a feeling we're quickly running out of friends on this planet.
+Okay, so we're back on the ol' dust bucket. Let's try not to forget anything while were here this time. We're quickly running out of friends on this planet.
 
-## Scrappy ransom {-}
+## A scrappy ransom {-}
 
-Plutt is demanding __10,000 items__ of scrap for Finn. Lucky for us he didn't clarify the exact items. Maybe we can find the scrap that weighs the least per item and make this transaction as effortless as possible. Let's look at our new scrap data and see if we have the mass of all the items.
+Mr. Baddy Plutt is demanding __10,000 items__ of scrap for Finn. Sounds expensive, but lucky for us he didn't clarify the exact items. Let's find the scrap that weighs the least per shipment and try to make this transaction as light as possible. 
+
+Take a look at our __NEW__ scrap data and see if we have the mass of all the items.
 
 ```{r fullscrap-units, eval=T}
 # What unit types are in the data?
@@ -124,24 +145,31 @@ distinct(scrap, units)
 <br>
 
 
-_Hmmm...._ So how much does a cubic yard of `Hull Panel`s weigh? 
+_Hmmm...._ So how much does a cubic yard of `Hull Panel` weigh? 
 
-Don't look at me! I think we're going to need some more data. 
+_A lot? 32? Maybe..._ 
 
-<div class="well">
-__"BB8. go do your data thing."__
+I think we're going to need some more data. 
+
+<br>
+
+<div class="tip">
+__"Hey BB8!__ 
+
+__Please go do your magic data finding thing."__
+
 </div>
 
-## Item to mass conversion {-}
+## Get the weights {-}
 
 ![](images/rey_bb8.jpg){align="right" style="width: 35%; margin-top: 0px; margin-left: 15px; margin-right: 0px;"}
 
-It took a while, but with a few droid bribes BB8 was finally able to track down a `Mass conversion table` from his old droid buddies. Our current data shows the total cubic yards for some scrap shipments, but not how much the shipment weighs. 
+It took a while, but with a few droid bribes BB8 was able to track down a `Mass conversion table` from his old droid buddies. Our current data shows the total cubic yards for some scrap shipments, but not how much the shipment weighs. 
 
-### Read the weight conversion table {-}
+### Read the mass conversion table {-}
 ```{r read-convert, eval = T, message = F}
 # The data's URL
-convert_url <- "https://itep-r.netlify.com/data/conversion_table.csv"
+convert_url <- "https://rtrain.netlify.com/data/conversion_table.csv"
 
 # Read the conversion data
 convert <- read_csv(convert_url)
@@ -151,17 +179,21 @@ head(convert, 3)
 
 <br>
 
-Let's join the new conversion table to the scrap data. For that we'll need to make a new friend, say __Hello__ to `left_join()`!  
+Stars! A cubic yard of `Hull Panel` weighs __641 lbs__. That's what I thought!
+
+Let's join this new conversion table to the scrap data to make our calculations easier. To do that we need to make a new friend.
+
+__Say "Hello" to `left_join()`!__  
 
 
 # | Join tables with `left_join()`
 
-![](images/left_join_venn.png){style="width: 55%; margin-left: 18%;"}
+![](images/leftjoin_scrap.png){style="width: 55%; margin-left: 18%;"}
 
-<br>
+<br><br>
 <hr>
 
-`left_join()` works like a zipper and combines two tables based on one or more variables. They can have the same name or not. Since it's `left_join`, the entire table on the left side is retained. Anything that matches from the right side is also kept, but the rest will be ignored.
+`left_join()` works like a zipper and combines two tables based on one or more variables. It's called "left"-join because the entire table on the left side is retained. Anything that matches from the right table gets to join the party, but the rest will be ignored.
 
 
 ## Join 2 tables {-}
@@ -175,7 +207,7 @@ Let's join the new conversion table to the scrap data. For that we'll need to ma
 
 Remember our porg friends? How rude of us not to share their names. __Wups!__
 
-Here's a table of their names.
+Here they are:
 
 <div style="margin-left: 10px; margin-top: 24px; width: 37%; margin-bottom: 34px;">
 ![](images/porgs/porg_names_tbl.png)
@@ -183,7 +215,7 @@ Here's a table of their names.
 
 <div style="clear: both;"></div>
 
-__Hey now!__ That's not very helpful. Who's who? Let's join their names to the rest of the data.
+__Hey now!__ That's not very helpful. Who's who? Let's join their names to the rest their data.
 
 <br>
 
@@ -192,7 +224,7 @@ __Hey now!__ That's not very helpful. Who's who? Let's join their names to the r
 
 <br>
 
-### __What's the result?__ {-}
+### __The result__ {-}
 
 <div class="well">
 ![](images/porgs/porgs_and_names.png){style="width: 85%; max-width: 85%;"}
@@ -202,11 +234,17 @@ __Hey now!__ That's not very helpful. Who's who? Let's join their names to the r
 
 ## Back to scrap land{-}
 
-Let's apply our new `left_join()` skills to our scrap data.
+Let's apply our new `left_join()` skills to the scrap data.
 
 <br>
 
 ### Join the conversion table to the scrap {-}
+
+Look at the tables. What columns in both tables do we want to join __by__?
+
+
+<br>
+
 ```{r join-convert, eval=T}
 scrap <- left_join(scrap, convert, 
                    by = c("item" = "item", "units" = "units"))
@@ -216,7 +254,9 @@ scrap <- left_join(scrap, convert,
 
 > Want to skimp on typing?
 
-When the 2 tables share column names that are the same, `left_join()` will automatically search for matching columns if you don't use the `by=` argument. So the code below does the same as above.
+<br>
+
+When the 2 tables share column names that are the same, `left_join()` will automatically search for matching columns. Nice! So the code below does the same as above.
 
 ```{r join-convert2, eval=F}
 scrap <- left_join(scrap, convert)
@@ -230,51 +270,94 @@ head(scrap, 4)
 
 <br>
 
-__Help!__ You can type `?left_join` to see all the arguments and options.
+__Want more details?__ 
+
+You can type `?left_join` to see all the arguments and options.
 
 <br>
 
+## Total pounds per shipment {-}
 
-#### <i class="fa fa-bicycle" aria-hidden="true" style="color: green"></i> Exercise {-}
+Let's mutate! 
+
+Now that we have pounds per unit we can use `mutate` to calculate the total pounds for each shipment.
+
+<br>
+
+```{r, echo=F}
+scrap <- scrap %>% 
+         mutate(total_pounds = amount * pounds_per_unit)
+         
+```
+
+__Fill in the blank__
+```{r, eval=F}
+scrap <- scrap %>% 
+         mutate(total_pounds = amount *  _____________ )
+         
+```
+
+<details>
+<summary class = "btn_code">_Show code_</summary>
+<p>
+```{r}
+scrap <- scrap %>% 
+         mutate(total_pounds = amount * pounds_per_unit)
+         
+```
+</p></details>
+
+
+## Total price per shipment {-}
+
+<div class="note">
+
+### <i class="fa fa-bicycle" aria-hidden="true" style="color: green"></i> Exercise {-}
 
 ```{r exer-tabs, results='asis', echo=F}
 source("insert_tabs.R")
 
-tabs <- c("Total credits", "Show hint", "Show code")
+tabs <- c("Total price", "Show hint", "Show code")
 
-content <- c(Exercise = "<h4> Total credits </h4>
+content <- c(Exercise = "<h4> Total price </h4>
 
-We now have the amount sold, the weight of that amount in pounds, and the price in credits per pound. Let's use these 3 pieces of information to find the total amount of credits for each transaction. How do we calculate that?
+We need to do some serious multiplication. We now have the total amount shipped in pounds, and the price per pound, but we want to know the total price for each transaction. 
+
+How do we calculate that? 
 
 code_start
 
-# Calculate the total credits for each transaction
+# Calculate the total price for each shipment
 scrap <- scrap %>% 
-         mutate(_______ = _______________)
+         mutate(credits = ________ * ________ )
          
 code_end",
 
-show_hint = '<h4> Total credits </h4>
+show_hint = '<h4> Total price </h4>
 
-We need to do some serious multiplication. We now have the amount sold, the conversion to pounds, and the credits per pound, but we want to know the total amount of credits for each transaction. How would we calculate that?
+We need to do some serious multiplication. We now have the total amount shipped in pounds, and the price per pound, but we want to know the total price for each transaction. 
+
+How do we calculate that?
 
 code_start
 
-# Calculate the total credits for each transaction
+# Calculate the total price for each shipment
 scrap <- scrap %>% 
-         mutate(credits = _______ * _______ * ________)
+         mutate(credits = total_pounds  * ________ )
 
 code_end',
 
-show_code = '<h4> Total credits </h4>
+show_code = '<h4> Total price </h4>
 
-We need to do some serious multiplication. We now have the amount sold, the conversion to pounds, and the credits per pound, but we want to know the total amount of credits for each transaction. How would we calculate that?
+We need to do some serious multiplication. We now have the total amount shipped in pounds, and the price per pound, but we want to know the total price for each transaction. 
+
+How do we calculate that?
 
 code_start
 
-# Calculate the total credits for each transaction
+# Calculate the total price for each shipment
 scrap <- scrap %>% 
-         mutate(credits = amount * pounds * price_per_pound)
+         mutate(credits = total_pounds * price_per_pound)
          
 code_end')
 
@@ -283,26 +366,49 @@ tab_html <- add_tabs(tabs, content)
 cat(paste0(tab_html, collapse = "\n"))
 ```
 
+</div>
+
 <br>
 
-<div class="note">
+```{r, echo=F}
+# Calculate the total price for each shipment
+scrap <- scrap %>% 
+         mutate(credits = total_pounds * price_per_pound)
+```
 
-Data analysts often get asked questions similar to:
 
-- What's the highest number? 
+## Price per item {-}
+
+__Great!__ Let's add one last column. We can divide the shipment's _credits_ by the _amount_ of items to get the `price_per_unit`.
+
+```{r}
+# Calculate the price per unit
+scrap <- scrap %>% 
+         mutate(price_per_unit = credits / amount)
+```
+
+<br>
+
+<div class="note" style="line-height: 1.6;">
+
+Data analysts often get asked summary questions such as:
+
+- What's the highest or worst? 
 - What's the lowest number? 
-- So what's the average tonnage of scrap from Cratertown this year? 
-- Who's making the most money this year?
-
-#### So let us move on to `summarize()`. {-}
+- Is that worse than average?
+    - What's the average tonnage of scrap from Cratertown this year? 
+- What city is making the most money?
 
 </div>
 
 
-# | `summarize()` this
+### On to `summarize()`! {-}
+
+
+# | `summarize()` this!
 <hr>
 
-![](images/summarize_diagram.png){width="490"}
+![](images/summarize_diagram.png){width="500"}
 
 `summarize()` allows you to apply a summary function like `median()` to a column and collapse your data down to a single row. To really dig into `summarize` you'll want to know some common summary functions, such as `sum()`, `mean()`, `median()`, `min()`, and `max()`.
 
@@ -310,9 +416,9 @@ Data analysts often get asked questions similar to:
 
 ## `sum()` {-}
 
-Use `summarize()` and `sum()` to find the total credits from all the scrap.
+Use `summarize()` and `sum()` to find the total credits of __all__ the scrap.
 
-```{r, eval = F}
+```{r, eval=F}
 summarize(scrap, total_credits = sum(credits))
 ```
 
@@ -320,10 +426,8 @@ summarize(scrap, total_credits = sum(credits))
 ## `mean()` {-}
 Use `summarize()` and `mean()` to calculate the _mean_ `price_per_pound` in the scrap report.
 
-```{r, eval = F}
-
+```{r, eval=F}
 summarize(scrap, mean_price = mean(price_per_pound, na.rm = T))
-
 ```
 
 <br>
@@ -334,45 +438,39 @@ summarize(scrap, mean_price = mean(price_per_pound, na.rm = T))
 ## `median()` {-}
 Use summarize to calculate the _median_ price_per_pound in the scrap report.
 
-`summarize(scrap, median_price = median(price_per_pound, na.rm = T))`
+```{r, eval=F}
+summarize(scrap, median_price = median(price_per_pound, na.rm = T))
+```
 
 ## `max()` {-}
 Use summarize to calculate the _maximum_ price per pound any scrapper got for their scrap.
 
-`summarize(scrap, max_price = max(price_per_pound, na.rm = T))`
+```{r, eval=F}
+summarize(scrap, max_price = max(price_per_pound, na.rm = T))
+```
 
 ## `min()` {-}
 Use summarize to calculate the _minimum_ price per pound any scrapper got for their scrap.
 
+```{r, eval=F}
+summarize(scrap, min_price = min(price_per_pound, na.rm = T))
+```
 
 ## `nth()` {-}
-Use `summarize()` and `nth(Origin, 12)` to find the name of the Origin City that got the  _12th_ highest scrapper haul.   
+Use `summarize()` and `nth(Origin, 12)` to find the name of the Origin City that had the  _12th_ highest scrapper haul.   
 
 _Hint: Use `arrange()` first._
 
-`arrange(scrap, desc(credits)) %>% summarize(price_12 = nth(origin, 12))`
-
-
-## `n()` {-}
-
-`n()` stands for _count_.
-
-Use summarize and `n()` to count the number of reported scrap records going to `Niima outpost`. 
-
-__Hint:__ Use `filter()` first.
-
 ```{r, eval=F}
-niima_scrap <- filter(scrap, destination == "Niima Outpost") 
-
-niima_scrap <- summarize(niima_scrap, scrap_records = n())
-
+arrange(scrap, desc(credits)) %>% summarize(price_12 = nth(origin, 12))
 ```
+
 
 ## `quantile()` {-}
 
-_Quantiles_ are useful for finding the upper or lower range of a column. Use the `quantile()` function to find the the 5th and 95th quantile of the prices.
+Quantiles are great for finding the upper or lower range of a column. Use the `quantile()` function to find the the 5th and 95th quantile of the prices.
 
-```{r quants, eval = FALSE}
+```{r quants, eval=F}
 
 summarize(scrap, 
           price_5th_pctile  = quantile(price_per_pound, 0.05, na.rm = T),
@@ -384,50 +482,136 @@ __Hint:__ Add `na.rm = T` to `quantile()`.
 
 <br>
 
+<div class="tip">
 
 ### <i class="fa fa-bicycle" aria-hidden="true" style="color: green"></i> Exercise {-}
 
 Create a summary of the scrap data that includes 3 of the summary functions above. The following is one example.
 
 ```{r, eval = F}
-
-summary <- summarize(scrap, 
-                     max_credits      = __________,
-                     mean_credits     = __________,
-                     count_of_records = __________ )
+summary <- scrap %>% 
+             summarize(max_credits      =  __________ ,
+                       mean_credits     =  __________ ,
+                       min_pounds       =  __________  )
                      
 ```
+
+</div>
 
 <br>
 
 
+## `n()` {-}
 
-<div class="note">
+`n()` stands for _count_. It has the smallest function name I know of, but is super useful.
 
-#### __Shut me down!__ {-}
+Use summarize and `n()` to count the number of reported scrap records going to `Niima outpost`. 
 
-That was a whole lot of summarizing. Do we really have to filter to the Origin City that we're interested in every time? 
+<br>
 
-It sure would be nice if we could easily find the mean price for every Origin City. Then we could summarize once and be done with it.
+__Hint:__ Use `filter()` first.
 
-#### It's time for `group_by()`! {-}
+```{r, eval=F}
+niima_scrap <- filter(scrap, destination == "Niima Outpost") 
+```
 
-</div>
+
+```{r, eval=F}
+niima_scrap <- summarize(niima_scrap, scrap_records = n())
+```
+
+
+<br>
+
+Ok. That was fun. Now let's do a summary for Cratertown. And then for Blowback Town. And then for Tuanul. And then for...
+
+<br>
+
+
+### __Wait!__ {-}
+
+> Do we really need to `filter` to the _origin_ city that we're interested in every single time? 
+>
+> How about you just give me the mean price for every _origin_ city. Then I could use that to answer a question about any city I want.
+>
+> Okay. Fine. It's time we talk about __`group_by()`.__ 
+>
+
 
 # | `group_by()`
 <hr>
 
-## Bargain hunters {-}
+## The junk Capital of Jakku
 
-Who's selling goods for cheap? Use `group_by` with the column _Origin_, and then use`summarize` to find the `mean(price_per_pound)` at each Origin City. 
+> Which origin city had the most shipments of junk?
 
-```{r mean_price-by-origin, eval = F}
+<br>
 
-scrap_summary <- group_by(scrap, origin) %>% 
-                 summarize(mean_price =  mean(price_per_pound, na.rm = T)) 
+Use `group_by` with the column _origin_, and then use`summarize` to count the __number__ of records at each origin city. 
+
+<br>
+
+__Fill in the blank__
+```{r total-shipped, eval=F}
+
+scrap_shipments <- group_by(scrap, ______ ) %>% 
+                     summarize(shipments =  ______ ) 
 
 ```
 
+<details>
+<summary class = "btn_code">_Show code_</summary>
+<p>
+```{r count-ships, eval=F}
+
+scrap_shipments <- group_by(scrap, origin ) %>% 
+                     summarize(shipments =  n() ) 
+
+```
+</p></details>
+
+
+<div class="quiz">
+### Pop Quiz! {-}
+
+__Which city had the most scrap shipments?__
+
+<input type="radio"> _Tuanul_         <br> 
+<input type="radio"> _Outskirts_      <br> 
+<input type="radio"> _Reestki_        <br> 
+<input type="radio"> _Cratertown_     <br> 
+<br>
+
+<details>
+<summary class = "btn_code">_Show solution_</summary>
+
+<p>
+<i class="fa fa-check" aria-hidden="true" style="color: green;"></i> `Cratertown`  
+
+_You've got the POWER!_
+
+</p>
+</details></div>
+
+
+## Bargain hunters {-}
+
+Who's selling goods for cheap? 
+
+Use `group_by` with the column _origin_, and then use`summarize` to find the `mean(price_per_unit)` at each origin city. 
+
+
+<details>
+<summary class = "btn_code">_Show code_</summary>
+<p>
+```{r mean_price-by-origin, eval=F}
+
+mean_prices <- group_by(scrap, origin) %>% 
+                 summarize(mean_price = mean(price_per_unit, na.rm = T)) %>%
+                 ungroup()
+
+```
+</p></details>
 
 <br>
 
@@ -435,14 +619,14 @@ scrap_summary <- group_by(scrap, origin) %>%
 <details>
 <summary class="btn_code_blue"> EXPLORE: Rounding digits </summary>
 
-<div class="note">
+<div class="note" style="margin-top: -9px;">
 <p>
 You can round the prices to a certain number of digits using the `round()` function. We can finish by adding the `arrange()` function to sort the table by our new column.
 
 ```{r mean_price-by-Origin-round, eval = F}
 
 scrap_means <- group_by(scrap, origin) %>% 
-                 summarize(mean_price       =  mean(price_per_pound, na.rm = T),
+                 summarize(mean_price       = mean(price_per_unit, na.rm = T),
                            mean_price_round = round(mean_price, digits = 2)) %>%  
                  arrange(mean_price_round) %>%
                  ungroup()
@@ -463,24 +647,11 @@ The `round()` function in R does not automatically round values ending in 5 up. 
 
 <br>
 
-So who's making lots of transactions? Try using `group_by` with the column _origin_ and then `summarize` to count the number of scrap records for each origin city.  
 
-```{r grp-by-origin, eval = FALSE}
-
-scrap_counts <- group_by(scrap, origin) %>% 
-                summarize(origin_count  =  n()) %>% 
-                ungroup()
-
-```
-
-
-<br>
-
+<div class="tip">
 ### <i class="fa fa-user-astronaut" aria-hidden="true" style="color:#040707;"></i> Pro-tip! {-}
-<div class="well">
 
 Ending with `ungroup()` is good practice. This prevents your data from staying grouped after the summarizing has been completed.
-
 </div>
 
 
@@ -498,10 +669,11 @@ write_csv(scrap_summary, "results/prices_by_origin.csv")
 
 <br>
 
-### <i class="fa fa-user-astronaut" aria-hidden="true" style="color:#040707;"></i> __Warning!__ {-}
-<div class="well">
+<div class="red-note">
 
-By default, when saving R will overwrite a file if the file already exists in the same folder. It will not ask for confirmation. To be safe, save processed data to a new folder called `results/` and not to your raw `data/` folder.
+##### <i class="fas fa-exclamation-triangle" style="color: #040707;"></i> __WARNING!__ {-}
+
+By default, when saving files R will overwrite a file if the file already exists in the same folder. It will not ask for confirmation. To be safe, save processed data to a new folder called `results/` and not to your raw `data/` folder.
 
 </div>
 
@@ -513,86 +685,92 @@ By default, when saving R will overwrite a file if the file already exists in th
 <br>
 
 
-![](images/yoda_lightsaber.jpg){style="width: 44%; margin-top: -8px; margin-bottom: 12px;" align="center"}
+![](images/yoda_lightsaber.jpg){style="width: 46%; margin-left: 26.5%; margin-top: -8px; margin-bottom: 12px;"}
+
+<br>
 
 Here's a handy `ifelse` statement to help you identify lightsabers.
-<div class="well">
+
+<div class="well" style="margin-top: 10px:">
 `ifelse( `__Is lightsaber__ <span style="color: green;">__GREEN__?</span>, __Yes!__ ` Then it's Yoda's,` __No!__ ` Then it's not Yoda's)`
 
 </div>
 
 <br>
 
-Say you want convert lbs to tons, but only for the rows that aren't in tons already. In other words, you want the value of a new column to depend on the value of an existing column. We use `ifelse()` for this.
+Say you want to label all the porgs over _60 cm_ as tall, and everyone else as short. In other words, we want to add a column where the value depends on the value found in the height column. We use `ifelse()` for this.
 
-Another example would be if you have measurements in both PPB and PPM, and you want to convert all the PPM measurements to PPB. Or maybe you have a list of expensive and inexpensive scrap ion engines, and you want to flag only the ones that cost less than 500 credits. In both cases `ifelse` is great tool.
+Or maybe you have a list of prices for scrap, and you want to flag only the ones that cost less than 500 credits. 
 
 ## `mutate()` + `ifelse()` is powerful! {-}
 
-![](images/yoda_rise_sm.png){style="width: 78%;" align="center"}
+![](images/yoda_rise_sm.png){style="width: 74%; margin-left: 12%"}
 
 <br>
 
-### Units update {-}
 
-To start off, let's make sure the units for Tons is always written the same way in our data. We can use `mutate` and `ifelse` to change any row with units `TONS` to units `Tons`.
+### On the cheap {-}
 
+Bad news. We're on a budget people. Rey can't afford anything over 500 credits per item. 
+
+Let's add a column that labels the items as "Cheap" __if__ the price is less than 500.
+
+__Add an affordable column__
 ```{r ifelse, message=F, warning=F}
-
 library(dplyr)
 library(readr)
 
-# Get the data
-scrap <- read_csv("https://itep-r.netlify.com/data/starwars_scrap_jakku.csv")
-
-# Convert the TONS in all capital letters to title case "Tons"
-# On Day 1 we did this using tolower()
-
+# Add an affordable column
 scrap <- scrap %>% 
-         mutate(units = ifelse(units == "TONS", "Tons", units))
+         mutate(affordable = ifelse(price_per_unit < 500, "Cheap", "Expensive"))
 
 ```
 
-<br>
 
-### Calibration error {-}
 
-![](images/cratertown.png){align="left" style="width: 44%; margin-top: 18px; margin-right: 24px;"}
+<div class="tip">
 
-<br>
+#### <i class="fa fa-cogs" aria-hidden="true" style="color: green"></i> Exercise {-}
 
-We just received news that Cratertown's scale was rigged. It was miscalibrated to overestimate the tons of outgoing scrap. __Smart!__ But that means we have some bad junk data mixed in with our scrap data. Let's use `ifelse` to reduce the tonnage by `10%`, but only for the scrap coming from `Cratertown`.
+Use `filter()` to create a new `cheap_scrap` table.
 
-<br>
-
-<div style="clear: both;"></div>
-
-```{r calibrate, eval=T}
-# Reduce the amount of scrap from Cratertown by 10%
-## Multiply the column "amount" * 0.90 
-## Use ifelse() to only select rows where the origin == "Cratertown"
-scrap <- scrap %>% 
-         mutate(amount = ifelse(origin == "Cratertown", amount * 0.90, amount))
-
-```
-
-<br>
-
-<div class="tip" style="clear: both;">
-__Congratulations__ of galactic proportions to you. 
-
-We now have a clean and tidy data set. If BB8 receives new data to append, we can re-run this script and in 5 seconds we'll have cleaned up data again!
 </div>
 
 
-<br><br>
+
+<div class="quiz">
+### Pop Quiz! {-}
+
+__What is the cheapest item?__
+
+<input type="radio"> _Black box_         <br> 
+<input type="radio"> _Electrotelescope_  <br> 
+<input type="radio"> _Atomic drive_      <br> 
+<input type="radio"> _Enviro filter_     <br> 
+<input type="radio"> _Main drive_        <br>
+<br>
+
+<details>
+<summary class = "btn_code">_Show solution_</summary>
+
+<p>
+<i class="fa fa-check" aria-hidden="true" style="color: green;"></i> `Black box`  
+
+_You win! _
+
+</p>
+</details></div>
 
 
 
 <br>
 
-<div style="clear: both;"></div>
+> __CONGRATULATIONS__ of galactic proportions to you. 
+>
+>We now have a clean and tidy data set. If BB8 receives new data to append, we can re-run this script and in 5 seconds we'll have cleaned up data again!
+>
 
+<br>
 
 # | Plots with _ggplot2_
 <hr>
@@ -607,9 +785,9 @@ We now have a clean and tidy data set. If BB8 receives new data to append, we ca
 ## The `ggplot()` sandwich {-}
 
 
-![](images/auto_plot.gif){style="margin-top: -2px; max-width: 106%;"}
+![](images/auto_plot.gif){style="margin-top: -22px; margin-left: -40px; max-width: 110%;"}
 
-<h5 style="font-size: 28px; font-weight: bold; margin-top: -42px;"> The 3 ingredients of a `ggplot` </h5>
+<h5 style="font-size: 28px; font-weight: bold; margin-top: -42px;"> A `ggplot` has 3 ingredients. </h5>
 
 
 ## 1. The base plot {-}
@@ -618,12 +796,12 @@ library(ggplot2)
 ```
 
 
-```{r, echo = F}
+```{r, echo=F}
 library(dplyr)
 library(readr)
 
 # Read in the conversion data
-convert <- read_csv("https://itep-r.netlify.com/data/conversion_table.csv")
+convert <- read_csv("https://rtrain.netlify.com/data/conversion_table.csv")
 
 # Read in scrap data
 scrap <- read_csv("https://itep-r.netlify.com/data/starwars_scrap_jakku_full.csv")
@@ -631,9 +809,15 @@ scrap <- read_csv("https://itep-r.netlify.com/data/starwars_scrap_jakku_full.csv
 # Join the scrap to the conversion table
 scrap <- left_join(scrap, convert)
 
-# Calculate the number of credits
+# Calculate the total price
 scrap <- scrap %>% 
-         mutate(credits = amount * pounds * price_per_pound)
+         mutate(total_pounds = amount * pounds_per_unit,
+                credits      = total_pounds * price_per_pound)
+
+# Calculate the price per unit
+scrap <- scrap %>% 
+         mutate(price_per_unit = credits / amount)
+
 
 ```
 
@@ -686,14 +870,6 @@ ggplot(scrap, aes(x = origin, y = credits, color = destination)) +
 ```
 
 
-
-### <i class="fa fa-user-astronaut" aria-hidden="true" style="color:#040707;"></i> Pro-tip! {-}
-<div class="well">
-
-An easy way to experiment with colors is to add layers like `+ scale_fill_brewer()` or `+ scale_colour_brewer()` to your plot which will link to RcolorBrewer palettes so you can have accessible color schemes.
-
-</div>
-
 ## Columns charts {-}
 
 Yikes! That point chart had too much detail. Let's make a column chart and add up the sales to make it easier to understand. Note that we used `fill =` instead of `color =`. Try using color instead and see what happens.
@@ -714,6 +890,18 @@ ggplot(scrap, aes(x = origin, y = credits, fill = destination)) +
 ```
 
 
+
+<div class="tip">
+
+### <i class="fa fa-user-astronaut" aria-hidden="true" style="color:#040707;"></i> EXERCISE {-}
+
+An easy way to experiment with colors is to add layers like `+ scale_fill_viridis()` or `+ scale_fill_brewer()` to your plot, which will link to RcolorBrewer so you can have accessible color schemes.
+
+Try adding one of thse to your column plot above.
+
+</div>
+
+
 ## Facet wrap {-}
 
 Does the chart feel crowded to you? Let's use `facet wrap` to put each origin in a separate chart.
@@ -725,10 +913,91 @@ ggplot(scrap, aes(x = origin, y = credits, fill = destination)) +
 ```
 
 
+# It's Finn time
+
+Seriously. Let's pay that ransom already. 
+
+> __Where should we go to get our 10,000 Black boxes?__
+
+<br>
+
+__Step 1:__ Filter the scrap data to only `Black box`.
+
+```{r, eval=F}
+cheap_scrap <- filter(scrap, ______    ==   _____   )
+
+```
+
+```{r, echo=F}
+cheap_scrap <- filter(scrap,item    ==   "Black box"  )
+```
+
+<br>
+
+__Step 2:__ Make a `geom_col()` plot of the total pounds of Black boxes shipped to each destination. 
+
+```{r, eval=F}
+
+ggplot(cheap_scrap, aes(x =   , y =    ) ) + 
+   geom_
+
+```
+
+<details>
+<summary class = "btn_code">_Show code_</summary>
+<p>
+
+
+```{r}
+ggplot(cheap_scrap, aes(x = destination, y = total_pounds) ) + 
+   geom_col()
+
+```
+
+</p></details>
+
+
+
+<div class="quiz">
+### Pop Quiz! {-}
+
+__Which destination has the most pounds of the cheapest item?__
+
+<input type="radio"> _Trade caravan_  <br> 
+<input type="radio"> _Niima Outpost_  <br> 
+<input type="radio"> _Raiders_        <br> 
+<br>
+
+<details>
+<summary class = "btn_code">_Show solution_</summary>
+
+<p>
+<i class="fa fa-check" aria-hidden="true" style="color: green;"></i> `Raiders`  
+
+_Woop! Go get em! So long Jakku - see you never!_
+
+</p>
+</details></div>
+
+
+<br><br>
+
+
+# <i class="fa fa-star" aria-hidden="true" style="color: gold"></i> CONCATULATIONS! <i class="fa fa-star" aria-hidden="true" style="color: gold"></i>
+<hr>
+
+> __Clap your hands. You have earned a great award.__
+
+
+<br>
+
+
+# Plot extras
+<hr>
 
 ## Themes {-}
 
-You may not like the appearance of these plots. `ggplot2` uses `theme` functions to change the appearance of a plot. Try some different themes out.
+Want to shake up the appearance of your plots? `ggplot2` uses `theme` functions to change the general appearance of a plot. Try some different themes out. Here's `theme_dark()`.
 
 ```{r, eval = T, echo = T}
 ggplot(scrap, aes(x = origin, y = credits, fill = destination)) +
@@ -755,6 +1024,7 @@ ggplot(scrap, aes(x = origin, y = credits, fill = destination)) +
 
 <br>
 
+
 ## Drop ` 1.0e+10` scientific notation {-}
 
 Is your boss scared of scientific notation? To hide it we can use `options(scipen = 999)`. Note that this is a general setting in R. Once you use `options(scipen = 999)` in your current session you won't have to use it again. Like loading a package, you only need to run the line once when you start RStudio.
@@ -778,14 +1048,14 @@ ggplot(scrap, aes(x = origin, y = credits, fill = destination)) +
 <div class="note">
 __CHALLENGE__
 
-Let's say we don't like printing so many zeros and want the labels to be in __Millions__ of credits. Any ideas on how to make it happen?
+Let's say we don't like printing so many zeros and want the labels to be in __Millions__ of credits. How can you make it happen?
 
 <br>
 
 <details><summary> [Click here for a HINT] </summary>
 <p>
 
-_Sorry, the hint is missing. You're on your own!_
+_Sorry, the hint is missing. You're on your own._
 
 </p>
 </details>
@@ -796,14 +1066,13 @@ _Sorry, the hint is missing. You're on your own!_
 <br>
 
 
-
 <div class="tip">
 
 ### <i class="fa fa-bicycle" aria-hidden="true" style="color: green"></i> Exercise {-}
 
 Be brave and make a boxplot. We've covered how to do a scatterplot with `geom_point` and a bar chart with `geom_col`, but how would you make a boxplot showing the prices at each destination? You're on your own here. Feel free to add `color` ,`facet_wrap`, `theme`, and `labs` to your boxplots. 
 
-May the force be with you.
+_May the force be with you._
 </div>
 
 
@@ -893,15 +1162,21 @@ You can customize the look of your plot by adding a `theme()` function.
 
 # Homeworld training {-}
 
-![](images/porg.png){style="float: right; margin-top: -14px;"}
+![](images/porg.png){style="float: right; margin-top: -34px;"}
 
 1. Load one of the data sets below into R
-    - Porg contamination on Ahch-To: https://itep-r.netlify.com/data/porg_samples.csv
-    - Planet Endor air samples: https://itep-r.netlify.com/data/air_endor.csv
+    - Porg contamination on Ahch-To
+        - `https://rtrain.netlify.com/data/porg_samples.csv`
+    - Planet Endor air samples
+        - `https://rtrain.netlify.com/data/air_endor.csv`
     - Or use data from a recent project of yours   
 
-2. Create 2 plots using the data. 
-3. _Don't worry if it looks_ __really weird__. _Consider it art and make another one._ 
+
+2. Create 2 plots using the data.
+
+
+3. _If you make something really_ __strange__. _Feel free to share! Consider it art and keep going._ 
+
 
 <div class="note">
 
@@ -909,7 +1184,7 @@ You can customize the look of your plot by adding a `theme()` function.
 
 When you add more layers using `+` remember to place it at the end of each line.
 
-```{r, eval = F, echo = T}
+```{r, eval=F, echo=T}
 # This will work
 ggplot(scrap, aes(x = origin, y = credits)) +
   geom_point()
@@ -925,11 +1200,13 @@ ggplot(scrap, aes(x = origin, y = credits))
 
 </div>
 
+<br><br>
 
-
-# <i class="far fa-question-circle" aria-hidden="true"></i> Plot Questions {-}
-
-<div style="font-size: 16px;">
+<details>
+<summary class = "btn_code"><h4> <i class="far fa-question-circle" aria-hidden="true"></i> Plots Q+A </h4> </summary>
+<div class="quiz" style="margin-top: -9px; background-color: white; font-size: 16px;">
+<p>
+<br>
 
 - How to modify the gridlines behind your chart?
     - Try the different themes at the end of this lesson: `theme_light()` or `theme_bw()`
@@ -954,7 +1231,8 @@ ggplot(scrap, aes(x = origin, y = credits))
     - There is a [Shortcut cheatsheet](https://www.rstudio.com/wp-content/uploads/2016/01/rstudio-IDE-cheatsheet.pdf)
     - In RStudio you can go to _Help_ > _Keyboard Shortcuts Help_
 
-</div>
+</p>
+</div></details>
 
 
 <br>
