--- a/01-Day1.Rmd
+++ b/01-Day1.Rmd
@@ -100,11 +100,11 @@ This is a temporary solution to get `R` + `RStudio` on your computer for the tra
 
 ### Test for success {-}
 
-- Open `RStudio.exe` in the _RStudio\bin_ folder
+- Open `RStudio.exe` in the _`RStudio\bin`_ folder
 
 ![](images/install/rstudio_exe.png){style="margin-left: 7%; width: 74%"}
 
-<br>
+<br><br>
 
 - If you see the screen below - Great work!  You're ready to go.
 
